testcases/valid/substitution2.prove
[A] [[A]:sth] [B] [[[x]op[y]]=>[[]C]] => [[[[A]:sth]op[B]] => [[]C]]
