testcases/invalid/substitution6.prove
[A] [[A]:sth] [B] [[B]:sth] [[[x]op[y]]=>[[]C]] => [[[[A]:st]op[[B]:sth]] => [[]C]]
